feat: change sequelizerc

--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
 #Database
 DB_NAME = colonymon
-DB_HOST = localhost
+DB_HOST = 18.233.224.30
 DB_PORT = 5432
-DB_PASS = 88130279
+DB_PASS = admin123
 DB_USER = postgres
 
 PORT = 3333
@@ -10,3 +10,4 @@ PORT = 3333
 JWT_SECRET = colonymonapi
 JWT_EXPIRES = 7d
 
+NODE_ENV = test
