feat: add initial gh actions

--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
 #Database
 DB_NAME = colonymon
-DB_HOST = 18.233.224.30
+DB_HOST = database-2.ckrljin60mjt.us-east-1.rds.amazonaws.com
 DB_PORT = 5432
-DB_PASS = admin123
+DB_PASS = postgres
 DB_USER = postgres
 
 PORT = 3333
