--- a/app/package.json
+++ b/app/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon src/server.js",
-    "build": "npx sequelize-cli db:migrate && rm -rf ./dist && sucrase ./src -d ./dist --transforms imports",
+    "build": "rm -rf ./dist && sucrase ./src -d ./dist --transforms imports",
     "postbuild": "zip app.zip -r dist package.json git.properties.json .npmrc",
     "start": "node ./dist/server.js"
   },
@@ -14,7 +14,7 @@
   "author": "Universidade Federal do Ceará",
   "license": "ISC",
   "dependencies": {
-    "bcryptjs": "^2.4.3",
+    "bcrypt": "^5.0.1",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
