--- a/.github/workflows/eb-deploy.yml
+++ b/.github/workflows/eb-deploy.yml
@@ -1,8 +1,8 @@
-name: Deploy master
+name: Deploy main to EB
 on:
   push:
     branches:
-    - master
+    - main
 jobs:
   build:
     runs-on: ubuntu-latest
