--- a/.github/workflows/eb-deploy.yml
+++ b/.github/workflows/eb-deploy.yml
@@ -16,7 +16,7 @@ jobs:
       uses: actions/checkout@v2
 
     - name: Install packages
-      run: npm Install
+      run: npm install
 
     - name: Generate deployment package
       run: npm run build
